--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Demo</title>
-    <link rel="stylesheet" href="https://unpkg.com/mocha@8/mocha.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/redux@4/dist/redux.js" crossorigin></script>
     <script src="https://unpkg.com/react-redux@7/dist/react-redux.js" crossorigin></script>
+    <script src="https://unpkg.com/redux-thunk@2/dist/redux-thunk.js" crossorigin></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.js" crossorigin></script>
     <script src="https://unpkg.com/ionicons@5/dist/ionicons/ionicons.esm.js" type="module" crossorigin></script>
-    <script src="https://unpkg.com/mocha@8/mocha.js"></script>
-    <script src="https://unpkg.com/chai@2/chai.js"></script>
 </head>
 <body>
 
-<div id="mocha"></div>
 <div id="root"></div>
 
 <script type="text/jsx">
@@ -195,10 +192,26 @@
         }
     }
 
+    function favoriteLotAsync (id) {
+        return (dispatch) => {
+            return api.post(`/lots/${id}/favorite`).then(() => {
+                dispatch(favoriteLot(id))
+            })
+        }
+    }
+
     function unfavoriteLot (id) {
         return {
             type: UNFAVORITE_LOT,
             id
+        }
+    }
+
+    function unfavoriteLotAsync (id) {
+        return (dispatch) => {
+            return api.post(`/lots/${id}/unfavorite`).then(() => {
+                dispatch(unfavoriteLot(id))
+            })
         }
     }
 
@@ -302,20 +315,8 @@
     }
 
     const lotMapDispatchToProps = {
-        favorite: (id) => {
-            return (dispatch) => {
-                api.post(`/lots/${id}/favorite`).then(() => {
-                    dispatch(favoriteLot(id))
-                })
-            }
-        },
-        unfavorite: (id) => {
-            return (dispatch) => {
-                api.post(`/lots/${id}/unfavorite`).then(() => {
-                    dispatch(unfavoriteLot(id))
-                })
-            }
-        }
+        favorite: favoriteLotAsync,
+        unfavorite: unfavoriteLotAsync
     }
 
     const LotConnected = ReactRedux.connect(null, lotMapDispatchToProps)(Lot)
